first_one/operator/templates/pipe-pod.yaml
apiVersion: v1
kind: Pod
spec:
  volumes:
    - name: shared-data
      emptyDir: {}
