first_one/operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    heritage: kudo
    kudo.dev/instance: first-one-instance
    kudo.dev/operator: first-one
  name: nginx-deployment
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
